--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- Link external style sheets here if you have them -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     <!-- Put css here if you don't have an external style sheet-->
     <style>
     </style>
@@ -17,6 +17,7 @@
       <h1>This is a Heading</h1>
       <p>This is a paragraph.</p>
       <p>This is another paragraph.</p>
+      <embed type="video/webm" src="https://files.catbox.moe/nwaojc.mov" width="400" height="300">
     </div>
   </body>
 </html> 
