--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>This is a Heading</h1>
       <p>This is a paragraph.</p>
       <p>This is another paragraph.</p>
-      <embed type="video/webm" src="https://files.catbox.moe/nwaojc.mov" width="400" height="300">
+      <iframe src="https://files.catbox.moe/nwaojc.mov"> </iframe>
     </div>
   </body>
 </html> 
