--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
       <h1>This is a Heading</h1>
       <p>This is a paragraph.</p>
       <p>This is another paragraph.</p>
-      <iframe src="https://files.catbox.moe/nwaojc.mov"> </iframe>
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
     </div>
   </body>
 </html> 
